--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,15 @@
 		</plugins>
 	</build>
 
+        <distributionManagement>
+        <repository>
+	    <id>maven-releases</id>
+	    <url>http://13.201.226.138:8081/repository/maven-releases/</url>
+	</repository>
+	<snapshotRepository>
+	    <id>maven-snapshots</id>
+	    <url>http://13.201.226.138:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+   </distributionManagemet>
 	
-
 </project>
